[CLIC] Dominik's comments

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -542,3 +542,47 @@ author = "F. Krummenacher",
       title          = "Medipix Collaboration",
       url            = "http://medipix.web.cern.ch/medipix/"
 }
+
+@article{Abramowicz:2010bg,
+      author         = "Abramowicz, H. and others",
+      title          = "{Forward Instrumentation for ILC Detectors}",
+      journal        = "JINST",
+      volume         = "5",
+      year           = "2010",
+      pages          = "P12002",
+      doi            = "10.1088/1748-0221/5/12/P12002",
+      eprint         = "1009.2433",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "DESY-10-142",
+      SLACcitation   = "%%CITATION = ARXIV:1009.2433;%%"
+}
+
+@article{Abramowicz:2004me,
+      author         = "Abramowicz, H. and others",
+      title          = "{Instrumentation of the very forward region of a linear
+                        collider detector}",
+      booktitle      = "{Room-temperature semiconductor detectors. Nuclear power
+                        systems. Proceedings, Nuclear Science Symposium (NSS),
+                        Workshop on Room-Temperature Semiconductor Detectors
+                        (RTSD), Symposium on Nuclear Power Systems (SNPS):
+                        Portland, USA, October 19-25, 2003}",
+      journal        = "IEEE Trans. Nucl. Sci.",
+      volume         = "51",
+      year           = "2004",
+      pages          = "2983-2989",
+      doi            = "10.1109/TNS.2004.839097",
+      SLACcitation   = "%%CITATION = IETNA,51,2983;%%"
+}
+
+@article{Abramowicz:2016zbo,
+      author         = "Abramowicz, H. and others",
+      title          = "{Higgs Physics at the CLIC Electron-Positron Linear
+                        Collider}",
+      year           = "2016",
+      eprint         = "1608.07538",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CLICDP-PUB-2016-001",
+      SLACcitation   = "%%CITATION = ARXIV:1608.07538;%%"
+}
