--- a/include/Software.tex
+++ b/include/Software.tex
@@ -371,9 +371,9 @@ affects mainly the definition of an event. In a frame-based mode, an
 event corresponds to a frame where the shutter of the detectors are
 opened and all the hits are integrated during an exposure time. When
 the shutter is closed, there is a dead-time where no data is acquired
-and all the hits are read out from the readout chips and recorded on
-tape in a raw data file. Whereas in the data-driven mode, the data are
-acquired as soon as a pixel is hit (there is no shutter and almost no
+and all the hits are read out from the readout chips and recorded in a
+raw data file. Whereas in the data-driven mode, the data are acquired
+as soon as a pixel is hit (there is no shutter and almost no
 dead-time). The hits are written in the raw file with their
 time-stamps coming from a combination of the TOA and the FPGA timing
 from the SPIDR readout. They are not ordered in time in the raw file
